[gd_scene load_steps=6 format=3 uid="uid://bfcx6g7142ff3"]

[ext_resource type="Script" path="res://scripts/hud/health_bar.gd" id="1_2v7qx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n364g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3bf7u"]
bg_color = Color(0.317647, 0.607843, 0.392157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xcbff"]
bg_color = Color(0.243137, 0.243137, 0.243137, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
shadow_color = Color(0, 0, 0, 0.27451)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g57q0"]
bg_color = Color(1, 1, 1, 1)

[node name="HealthBar" type="ProgressBar"]
z_index = 1
texture_filter = 1
offset_right = 240.0
offset_bottom = 4.0
theme_override_styles/background = SubResource("StyleBoxEmpty_n364g")
theme_override_styles/fill = SubResource("StyleBoxFlat_3bf7u")
step = 0.1
value = 60.0
show_percentage = false
script = ExtResource("1_2v7qx")

[node name="DamageBar" type="ProgressBar" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_xcbff")
theme_override_styles/fill = SubResource("StyleBoxFlat_g57q0")
step = 0.1
value = 80.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="health_regen_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="health_regen_timer" to="." method="_on_health_regen_timer_timeout"]
